--- a/css/style.scss
+++ b/css/style.scss
@@ -20,6 +20,11 @@ html {
     top: 0;
     right: 0;
     transform-origin: 0 0;
+    cursor: pointer;
+
+    &:hover {
+      //transform: rotateY(10deg);
+    }
 
     &:last-child {
       z-index: 0;
@@ -29,6 +34,7 @@ html {
     .back {
       width: 100%;
       height: 100%;
+      -webkit-backface-visibility: hidden;
       backface-visibility: hidden;
       position: absolute;
       top: 0;
@@ -50,11 +56,21 @@ html {
     }
 
   }
-}
 
-.pdfViewerWrapper{
-  width: 833px;
-  height: 589.4px;
-  margin: 20px auto;
-  position: relative;
+  .pdfViewerWrapper {
+    width: 833px;
+    height: 589.4px;
+    margin: 20px auto;
+    position: relative;
+  }
+
+  .showIe {
+    left: 0 !important;
+
+    .back {
+      z-index: 4;
+      transform: rotateY(0deg) !important;
+    }
+  }
+
 }
